<resources>
    <string name="app_name">Visualize</string>

    <!-- gTODO (4) Add string for Settings -->

    <!-- - - - - - - - - - - - - - - -
          - Used by Preferences  -
          - - - - - - - - - - - - - - - -->

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>

    <!-- Value in SharedPreferences for blue color option -->
    <string name="pref_color_blue_value" translatable="false">blue</string>

    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_color_green_value" translatable="false">green</string>

    <!-- Value in SharedPreferences for green color option -->
    <string name="action_settings">Settings</string>

    <!-- TODO (12) Add Strings for checkbox preference -->

    <string name="show_bass_key" translatable="false">show_bass</string>
    <string name="show_bass_title">Show Bass</string>
    <string name="pref_show_true">shown</string>
    <string name="pref_show_false">hidden</string>
    <!-- TODO (16) Add all of the strings for the new checkboxes -->

    <string name="mid_range_key" translatable="false">show_mid_range</string>
    <string name="mid_range_title">Show Mid</string>


    <string name="show_treble_key" translatable="false">show_trable</string>
    <string name="show_treble_title">Show Treble</string>


    <!-- TODO (20) Add string values for the list preference -->
    <string name="color_label">Shape Color</string>
    <string name="color_label_red">Red</string>
    <string name="color_label_blue">Blue</string>
    <string name="color_label_green">Green</string>

    <string name="color_key" translatable="false">color</string>
    <string name="color_red_value" translatable="false">red</string>
    <string name="color_blue_value" translatable="false">blue</string>
    <string name="color_green_value" translatable="false">green</string>

    <string name="size_label">Size Multiplier</string>
    <string name="size_key" translatable="false">size</string>
    <string name="size_devault" translatable="false">1</string>


    <!-- TODO (21) Add a res->values->arrays.xml file which contains two arrays, one for
        labels and one for values. The arrays should contain strings found in this file-->


</resources>



















